--- a/index.html
+++ b/index.html
@@ -12,5 +12,21 @@
 </head>
 <body>
 
+    <header class="header contenedor">
+        <div class="header__grid">
+            <div class="header__logo">
+                <img src="build/img/logo.svg" alt="logo escuela cocina">
+            </div>
+
+            <nav class="navegacion">
+                <a class="navegacion__link" href="#">Nosotros</a>
+                <a class="navegacion__link" href="#">Blog</a>
+                <a class="navegacion__link" href="#">Clases</a>
+                <a class="navegacion__link" href="#">Galería</a>
+                <a class="navegacion__link" href="#">Contacto</a>
+            </nav>
+        </div>
+    </header>
+
 </body>
 </html>
