--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
                 <a class="navegacion__link" href="#">Contacto</a>
             </nav>
         </div>
+
+        <section class="bloques">
+            <div class="bloques__grid">
+                <div class="bloque">
+                    <div class="bloque__contenido">
+                        <h2 class="bloque__heading">20 Años de Experiencia</h2>
+                        <p class="bloque__texto">Nos respaldan, siempre ofertando los mejores cursos para principiantes y expertos</p>
+                    </div>
+                </div>
+                <div class="bloque"></div>
+
+                <div class="bloque">
+                    <div class="bloque__contenido">
+                        <h2 class="bloque__heading">Sobre Nosotros</h2>
+                        <p class="bloque__texto">Un grupo de expertos, integrado por chef's de los mejores restaurantes de la ciudad</p>
+                    </div>
+                </div>
+                <div class="bloque"></div>
+            </div>
+        </section>
     </header>
 
 </body>
