--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a class="navegacion__link" href="#">Contacto</a>
             </nav>
         </div>
+    </header>
 
         <section class="bloques">
             <div class="bloques__grid">
@@ -46,7 +47,121 @@
                 <div class="bloque"></div>
             </div>
         </section>
-    </header>
+
+        <section class="nosotros contenedor">
+            <h2 class="nosotros__heading">¿Porqué estudiar con nosotros?</h2>
+
+            <div class="nosotros__grid">
+                <div class="nosotros__bloque">
+                    <img class="nosotros__imagen" src="build/img/icono_chef.png" alt="imagen icono">
+                    <h3 class="nosotros__bloque-heading">Chef’s Especialistas</h3>
+                    <p class="nosotros__bloque-texto">Los mejores chef’s que han trabajado en los mejores restaurants de Europa.</p>
+                </div>
+
+                <div class="nosotros__bloque">
+                    <img class="nosotros__imagen" src="build/img/icono_vino.png" alt="imagen icono">
+                    <h3 class="nosotros__bloque-heading">Incluye todo sobre Bebidas</h3>
+                    <p class="nosotros__bloque-texto">Además de la cocina, incluimos en el programa todo lo relacionado a bebidas.</p>
+                </div>
+
+                <div class="nosotros__bloque">
+                    <img class="nosotros__imagen" src="build/img/icono_menu.png" alt="imagen icono">
+                    <h3 class="nosotros__bloque-heading">Siempre Actualizado</h3>
+                    <p class="nosotros__bloque-texto">El Programa se actualiza constamemente con nuevos platillos y técnicas.</p>
+                </div>
+            </div>
+        </section>
+
+        <main class="clases">
+            <h2 class="clases__heading">Próximas Clases</h2>
+
+            <div class="clases__grid contenedor">
+                <div class="clase">
+                    <img src="build/img/clase1.jpg" alt="imagen curso">
+                    <div class="clase__meta">
+                        <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
+                        <p class="clase__precio">$300</p>
+                    </div>
+                    <div class="clase__contenido">
+                        <h3 class="clase__nombre">Comida Italiana para principiantes</h3>
+                        <p class="clase__descripcion">Aprende las bases de la comida italiana con este curso</p>
+                        <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur possimus quam odit harum explicabo. Eius a iusto minima voluptas non id obcaecati sit dolorum nulla! Provident unde aliquid fugiat facilis!</p>
+                        <a class="clase__enlace" href="#">Más Información</a>
+                    </div>
+                </div>
+
+                <div class="clase">
+                    <img src="build/img/clase2.jpg" alt="imagen curso">
+                    <div class="clase__meta">
+                        <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
+                        <p class="clase__precio">$300</p>
+                    </div>
+                    <div class="clase__contenido">
+                        <h3 class="clase__nombre">Planeación de Menús para bodas</h3>
+                        <p class="clase__descripcion">Aprende las bases de la comida italiana con este curso</p>
+                        <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur possimus quam odit harum explicabo. Eius a iusto minima voluptas non id obcaecati sit dolorum nulla! Provident unde aliquid fugiat facilis!</p>
+                        <a class="clase__enlace" href="#">Más Información</a>
+                    </div>
+                </div>
+
+                <div class="clase">
+                    <img src="build/img/clase3.jpg" alt="imagen curso">
+                    <div class="clase__meta">
+                        <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
+                        <p class="clase__precio">$300</p>
+                    </div>
+                    <div class="clase__contenido">
+                        <h3 class="clase__nombre">Preparación de Pasteles</h3>
+                        <p class="clase__descripcion">Aprende las bases de la comida italiana con este curso</p>
+                        <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur possimus quam odit harum explicabo. Eius a iusto minima voluptas non id obcaecati sit dolorum nulla! Provident unde aliquid fugiat facilis!</p>
+                        <a class="clase__enlace" href="#">Más Información</a>
+                    </div>
+                </div>
+
+                <div class="clase">
+                    <img src="build/img/clase4.jpg" alt="imagen curso">
+                    <div class="clase__meta">
+                        <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
+                        <p class="clase__precio">$300</p>
+                    </div>
+                    <div class="clase__contenido">
+                        <h3 class="clase__nombre">Comida Mexicana</h3>
+                        <p class="clase__descripcion">Aprende las bases de la comida italiana con este curso</p>
+                        <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur possimus quam odit harum explicabo. Eius a iusto minima voluptas non id obcaecati sit dolorum nulla! Provident unde aliquid fugiat facilis!</p>
+                        <a class="clase__enlace" href="#">Más Información</a>
+                    </div>
+                </div>
+
+                <div class="clase">
+                    <img src="build/img/clase5.jpg" alt="imagen curso">
+                    <div class="clase__meta">
+                        <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
+                        <p class="clase__precio">$300</p>
+                    </div>
+                    <div class="clase__contenido">
+                        <h3 class="clase__nombre">Comida de Marruecos</h3>
+                        <p class="clase__descripcion">Aprende las bases de la comida italiana con este curso</p>
+                        <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur possimus quam odit harum explicabo. Eius a iusto minima voluptas non id obcaecati sit dolorum nulla! Provident unde aliquid fugiat facilis!</p>
+                        <a class="clase__enlace" href="#">Más Información</a>
+                    </div>
+                </div>
+
+                <div class="clase">
+                    <img src="build/img/clase6.jpg" alt="imagen curso">
+                    <div class="clase__meta">
+                        <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
+                        <p class="clase__precio">$300</p>
+                    </div>
+                    <div class="clase__contenido">
+                        <h3 class="clase__nombre">Prepara 10 tipos de ensaladas</h3>
+                        <p class="clase__descripcion">Aprende las bases de la comida italiana con este curso</p>
+                        <p class="clase__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur possimus quam odit harum explicabo. Eius a iusto minima voluptas non id obcaecati sit dolorum nulla! Provident unde aliquid fugiat facilis!</p>
+                        <a class="clase__enlace" href="#">Más Información</a>
+                    </div>
+                </div>
+            </div>
+        </main>
+    
 
 </body>
 </html>
