--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <div class="clases__grid contenedor">
                 <div class="clase">
-                    <img src="build/img/clase1.jpg" alt="imagen curso">
+                    <img class="clase__imagen" src="build/img/clase1.jpg" alt="imagen curso">
                     <div class="clase__meta">
                         <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
                         <p class="clase__precio">$300</p>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="clase">
-                    <img src="build/img/clase2.jpg" alt="imagen curso">
+                    <img class="clase__imagen" src="build/img/clase2.jpg" alt="imagen curso">
                     <div class="clase__meta">
                         <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
                         <p class="clase__precio">$300</p>
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="clase">
-                    <img src="build/img/clase3.jpg" alt="imagen curso">
+                    <img class="clase__imagen" src="build/img/clase3.jpg" alt="imagen curso">
                     <div class="clase__meta">
                         <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
                         <p class="clase__precio">$300</p>
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="clase">
-                    <img src="build/img/clase4.jpg" alt="imagen curso">
+                    <img class="clase__imagen" src="build/img/clase4.jpg" alt="imagen curso">
                     <div class="clase__meta">
                         <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
                         <p class="clase__precio">$300</p>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="clase">
-                    <img src="build/img/clase5.jpg" alt="imagen curso">
+                    <img class="clase__imagen" src="build/img/clase5.jpg" alt="imagen curso">
                     <div class="clase__meta">
                         <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
                         <p class="clase__precio">$300</p>
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="clase">
-                    <img src="build/img/clase6.jpg" alt="imagen curso">
+                    <img class="clase__imagen" src="build/img/clase6.jpg" alt="imagen curso">
                     <div class="clase__meta">
                         <p class="clase__fecha">20 / Mayo / 2022 18:00 Hrs</p>
                         <p class="clase__precio">$300</p>
