--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
                 </div>
             </div>
         </main>
+
+        <section class="escuela">
+            <h2 class="escuela__heading">¿Quieres ser Chef?</h2>
+            <p class="escuela__texto">Estudia la licenciatura para convertirte en Chef con nosotros</p>
+            <a href="#" class="escuela__enlace">Más Información</a>
+        </section>
     
 
 </body>
