--- a/index.html
+++ b/index.html
@@ -167,6 +167,20 @@
             <p class="escuela__texto">Estudia la licenciatura para convertirte en Chef con nosotros</p>
             <a href="#" class="escuela__enlace">Más Información</a>
         </section>
+
+        <footer class="footer">
+            <div class="footer__grid contenedor">
+                <nav class="navegacion">
+                    <a class="navegacion__link" href="#">Nosotros</a>
+                    <a class="navegacion__link" href="#">Blog</a>
+                    <a class="navegacion__link" href="#">Clases</a>
+                    <a class="navegacion__link" href="#">Galería</a>
+                    <a class="navegacion__link" href="#">Contacto</a>
+                </nav>
+
+                <p class="footer__copyright">Todos los derechos reservados</p>
+            </div>
+        </footer>
     
 
 </body>
